--- a/Phase2/views/layouts/index.hbs
+++ b/Phase2/views/layouts/index.hbs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/common/page_layout.css">
     <link rel="stylesheet" type="text/css" href="/common/animation.css">
     <link rel="stylesheet" type="text/css" href="/common/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     {{{body}}}
