--- a/Phase2/views/post_page.hbs
+++ b/Phase2/views/post_page.hbs
@@ -49,86 +49,11 @@
                     <button id="postComment">Post</button>
                 </div>
             </div>
-            <div class="comment">
-                <div class="commentContainer">
-                    <img class="pfp" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
-                </div>
-                <div class="commentTextContainer">
-                    <h4>Focalors</h4>
-                    <p>Hyped for this!</p>
-                    <div class="buttonsContainer editCommentButtons">
-                        <button id="attachFilesComment">Attach Files</button>
-                        <button id="postComment" onclick="editCommentDiv(this)">Edit Comment</button>
-                    </div>
-
-                    <div class="commentActionsContainer">
-                        <i class="fa-solid fa-thumbs-up"></i>
-                        <span> 123</span>
-                        <i class="fa-solid fa-thumbs-down"></i>
-                        <span> 123</span>
-                        <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
-                        <button onclick="editCommentDiv(this)">Edit</button>
-                        <button class="deleteCommentButton">Delete</button>
-
-                        <div class="createComment replyComment">
-                            <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
-                            <div class="buttonsContainer">
-                                <button id="attachFilesComment">Attach Files</button>
-                                <button id="postComment">Reply</button>
-                            </div>
-                        </div>
-
-                        <div class="comment">
-                            <div class="commentContainer">
-                                <img class="pfp" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
-                            </div>
-                            <div class="commentTextContainer">
-                                <h4>Tuonto</h4>
-                                <p>Sekai de ichiban ohime-sama</p>
-                                <div class="commentActionsContainer">
-                                    <i class="fa-solid fa-thumbs-up"></i>
-                                    <span> 123</span>
-                                    <i class="fa-solid fa-thumbs-down"></i>
-                                    <span> 123</span>
-                                    <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
-            
-                                    <div class="createComment replyComment">
-                                        <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
-                                        <div class="buttonsContainer">
-                                            <button id="attachFilesComment">Attach Files</button>
-                                            <button id="postComment">Post</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>            
-                        </div>
-                    </div>
-                </div>            
-            </div>
-            <div class="comment">
-                <div class="commentContainer">
-                    <img class="pfp" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
-                </div>
-                <div class="commentTextContainer">
-                    <h4>Tuonto</h4>
-                    <p>Oratrice Mecanique d'Analyse Cardinale</p>
-                    <div class="commentActionsContainer">
-                        <i class="fa-solid fa-thumbs-up"></i>
-                        <span> 123</span>
-                        <i class="fa-solid fa-thumbs-down"></i>
-                        <span> 123</span>
-                        <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
-
-                        <div class="createComment replyComment">
-                            <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
-                            <div class="buttonsContainer">
-                                <button id="attachFilesComment">Attach Files</button>
-                                <button id="postComment">Post</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {{#each commentdetails}}
+                {{#if c_parentComment}}
+                {{> comment this}}
+                {{/if}}
+            {{/each}}
         </div>
     </div>
 
