--- a/Phase2/views/register_page.hbs
+++ b/Phase2/views/register_page.hbs
@@ -1,5 +1,4 @@
-
-    <div class = "circles">
+<div class = "circles">
         <div></div>
         <div></div>
         <div></div>
@@ -25,30 +24,30 @@
     <div class="main">
         <div class="blur-bottom login-form-container">
             <h1 style="text-align: center;">Register</h1>
-            <form class='login-form'>
+            <form class="login-form" name="create-user-form" action="/api/user/createUser" method="POST">
                 <div class="input-box-register">
                     <img src = "https://static.vecteezy.com/system/resources/previews/000/646/268/original/email-symbol-icon-vector.jpg"/>
 
-                    <input type="email" placeholder="Username">
+                    <input type="text" placeholder="Username" name="username">
                 </div>
                 <div class="input-box-register">
                     <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
-                    <input type="password"  placeholder="Password">
+                    <input type="password"  placeholder="Password" name="password">
                 </div>
                 <div class="input-box-register">
                     <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
-                    <input type="password"  placeholder="Verify Password">
+                    <input type="password"  placeholder="Verify Password" name="password2">
                 </div>
                 <div class="input-box-register">
                     <img src = "https://filestore.community.support.microsoft.com/api/images/0ce956b2-9787-4756-a580-299568810730?upload=true"/>
-                    <input type="text"  placeholder="Displayname">
+                    <input type="text"  placeholder="Displayname" name="displayname">
                 </div>
                 <div class="input-box-register">
                     <img src = "https://filestore.community.support.microsoft.com/api/images/0ce956b2-9787-4756-a580-299568810730?upload=true"/>
-                    <input type="date"  placeholder="Birthday">
+                    <input type="date"  placeholder="Birthday" name="birthdate">
                 </div>
-                <input type="button" onclick="location.href='main_page.html'" value="REGISTER" class="logregbutton">
-                </form>    
+                <input type="submit" value="REGISTER" class="logregbutton">
+            </form>    
         </div>
       
         <div class="register-prompt">
