--- a/Phase2/views/partials/comment.hbs
+++ b/Phase2/views/partials/comment.hbs
@@ -15,16 +15,26 @@
         <p name="commentText">{{c_body}}</p>
         <div class="buttonsContainer editCommentButtons">
             <button id="attachFilesComment">Attach Files</button>
-            <button id="postComment" onclick="editCommentDiv(this)">Edit Comment</button>
+            <button id="postComment" onclick="editCommentDiv(this); window.alert('To Be Done')">Edit Comment</button>
         </div>
             <div class="commentActionsContainer">
-            <i class="fa-solid fa-thumbs-up"></i>
-            <span name="numLikes"> 123</span>           <!--Implement Later-->
-            <i class="fa-solid fa-thumbs-down"></i>
-            <span name="numDislikes"> 123</span>
+            <i class="fa-solid fa-thumbs-up" id="like_{{c_id}}"></i>
+            <span name="numLikes"> {{c_numLikes}}</span>
+            <i class="fa-solid fa-thumbs-down" id="dislike_{{c_id}}"></i>
+            <span name="numDislikes"> {{c_numDislikes}}</span>
             <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
+            {{#if c_isAuthor}}
             <button onclick="editCommentDiv(this)">Edit</button>
-            <button class="deleteCommentButton">Delete</button>
+            <button class="deleteCommentButton" onclick="window.alert('To Be Done')">Delete</button>
+            {{/if}}
+
+            <div class="createComment replyComment">
+                <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                <div class="buttonsContainer">
+                    <button id="attachFilesComment">Attach Files</button>
+                    <button id="postComment" onclick="window.alert('To Be Done')">Reply</button>
+                </div>
+            </div>
         </div>
 
         {{#each replies}}
