fixed navigation pages, fixed if statements when logged in or not

--- a/Phase2/views/login_page.hbs
+++ b/Phase2/views/login_page.hbs
@@ -39,10 +39,10 @@
                 </form>                      
         </div>
         <br>
-
+        <div class="err">{{res}}</div>
 
         <div class="register-prompt">
-            Don't have an account yet? Click <a href="register_page.html">here</a> to register.
+            Don't have an account yet? Click <a href="/api/user/register">here</a> to register.
         </div>
     </div>
 
