--- a/Phase2/views/register_page.hbs
+++ b/Phase2/views/register_page.hbs
@@ -35,10 +35,6 @@
                     <input type="password"  placeholder="Password" name="password">
                 </div>
                 <div class="input-box-register">
-                    <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
-                    <input type="password"  placeholder="Verify Password" name="password2">
-                </div>
-                <div class="input-box-register">
                     <img src = "https://filestore.community.support.microsoft.com/api/images/0ce956b2-9787-4756-a580-299568810730?upload=true"/>
                     <input type="text"  placeholder="Displayname" name="displayname">
                 </div>
@@ -51,7 +47,7 @@
         </div>
       
         <div class="register-prompt">
-            Have an account already? Click <a href="login_page.html">here</a> to login.
+            Have an account already? Click <a href="/api/user/login">here</a> to login.
         </div>
     </div>
 
