--- a/Phase2/views/user_profile_page.hbs
+++ b/Phase2/views/user_profile_page.hbs
@@ -79,10 +79,10 @@
     </div>
 </div>
 
+<!-- popup for  UPDATE BUTTON-->
 <div class = "popup" id = "popup_js2">
         <div class="for-center-create">
         <div class="blur-left post-form-container">
-            <!--
             <h1><strong>Update Post</strong></h1>
             
             <form class="create-post-form" name="create-post-form" action="/api/post/createPost" method="POST" enctype="multipart/form-data">
@@ -105,7 +105,6 @@
                 <input type="submit" value="submit">
                 
             </form>
-            -->
             <div class = "close-btn" id="close-btn">&times;</div>
             <h1> <strong>This feature is Coming Soon! Wait for Updates!</strong></h1>
         </div>
@@ -113,33 +112,10 @@
 </div>
 
 
+<!-- popup for  DELETE BUTTON-->
 <div class = "popup" id = "popup_js3">
         <div class="for-center-create">
         <div class="blur-left post-form-container">
-            <!--
-            <h1><strong>Update Post</strong></h1>
-            
-            <form class="create-post-form" name="create-post-form" action="/api/post/createPost" method="POST" enctype="multipart/form-data">
-                
-                <div class = "close-btn" id="close-btn">&times;</div>
-                <label>Title</label>
-                <input type="text" placeholder="Enter Title" class="create-select-tag" style="width:50%" name="title">
-                <label>Tag</label>
-                    <select style="width:50%" name="tags">
-                        <option>Genshin Impact</option>
-                        <option>Honkai Star Rail</option>
-                        <option>Honkai Impact</option>
-                        <option>Zenless Zone Zero</option>
-                        <option>Mihoyo</option>
-                    </select>
-                <label>Content</label>
-                <input type="hidden" name="id" value="66776c6fb5909970e7f38836">
-                <textarea class="create-post-textarea" name="body"></textarea>
-                <input type="file" style="width:50%" name="image">
-                <input type="submit" value="submit">
-                
-            </form>
-            -->
             <div class = "close-btn" id="close-btn2">&times;</div>
             <h1> <strong>This feature is Coming Soon! Wait for Updates!</strong></h1>
         </div>
