--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -45,7 +45,11 @@
         <div class="tags"><button style="margin-right:10px;">{{p_tags}}</button></div>
         <div class="img-div-post"><img src="/{{p_image.p_filepath}}" class="img-post"></div>
         <br>
+        {{#if isLoggedIn}}
         <input type="button" onclick="navigateToPostPage('{{_id}}')" value="See More">
+        {{else}}
+        <input type="button" onclick="navigateToPostPageLogged('{{_id}}')" value="See More">
+        {{/if}}
     </div>
     {{/each}}
 
@@ -82,6 +86,11 @@ function navigateToPostPage(id) {
     const url = `/api/post/getPost/${id}`;
     window.location.href = url;
 }
+function navigateToPostPageLogged(id) {
+    const url = `/api/post/getPost/${id}?isLoggedIn=true`;
+    window.location.href = url;
+}
+
 
 
 </script>
