--- a/Phase2/views/register_page.hbs
+++ b/Phase2/views/register_page.hbs
@@ -45,7 +45,7 @@
                 <input type="submit" value="REGISTER" class="logregbutton">
             </form>    
         </div>
-      
+        <div class="err">{{res}}</div>
         <div class="register-prompt">
             Have an account already? Click <a href="/api/user/login">here</a> to login.
         </div>
