--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -3,7 +3,8 @@
 {{else}}
     {{> header}}
 {{/if}}
-
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="blur-left cards-container" style="margin: 0px 300px 0px 300px;">
     <div class="cards-top">
         {{#if isLoggedIn}}
@@ -16,16 +17,16 @@
                     <input type="text" class="search-bar" name="query"></div>
                 <div class="custom-select">
                     <select name="tags">
+                        <option>All</option>
                         <option>Genshin Impact</option>
                         <option>Honkai Star Rail</option>
                         <option>Honkai Impact</option>
                         <option>Zenless Zone Zero</option>
                         <option>Mihoyo</option>
-                        <option>All</option>
                     </select>
                     <select name="sort">
-                        <option value="upvotes">Hottest</option>
                         <option value="p_date">Newest</option>
+                        <option value="upvotes">Hottest</option>
                     </select>
                 </div>
                 <input type="submit">
@@ -46,10 +47,14 @@
         <div class="img-div-post"><img src="/{{p_image.p_filepath}}" class="img-post"></div>
         <br>
         {{#if isLoggedIn}}
-        <input type="button" onclick="navigateToPostPage('{{_id}}')" value="See More">
-        {{else}}
         <input type="button" onclick="navigateToPostPageLogged('{{_id}}')" value="See More">
+        {{else}}
+        <input type="button" onclick="navigateToPostPage('{{_id}}')" value="See More">
         {{/if}}
+            <i class="fa-solid fa-thumbs-up upvote-icon"></i>
+            <span class="downvote-count">{{upvotes}}</span>
+            <i class="fa-solid fa-thumbs-down downvote-icon"></i>
+            <span class="upvote-count">{{downvotes}}</span>        
     </div>
     {{/each}}
 
