Comment work idk

--- a/Phase2/views/partials/comment.hbs
+++ b/Phase2/views/partials/comment.hbs
@@ -7,8 +7,8 @@
         {{/if}}
     </div>
     <div class="commentTextContainer">
-        <h4 name="username">{{c_username}}</h4>
-        <span name="date">{{c_Date}}</span>
+        <h4 name="username">{{c_u_OID.u_username}}</h4>
+        <span name="date">{{c_date}}</span>
         {{#if c_has_been_edited}}
         <span>Edited</span><br>
         {{/if}}
