--- a/Phase2/views/user_profile_page.hbs
+++ b/Phase2/views/user_profile_page.hbs
@@ -41,6 +41,7 @@
                 <div class="profile-comment-header"><strong>Comments</strong></div>
             </div>
 
+            <!--Edit here comments -->
             <div class="comment-container">
                 <div class="comments">Tuonto: Sekai de ichiban ohime-sama</div>
                 <a href="post_page_1.html">Link to Post</a href>
