--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -46,10 +46,10 @@
         <div class="tags"><button style="margin-right:10px;">{{p_tags}}</button></div>
         <div class="img-div-post"><img src="/{{p_image.p_filepath}}" class="img-post"></div>
         <br>
-        {{#if isLoggedIn}}
-        <input type="button" onclick="navigateToPostPageLogged('{{_id}}')" value="See More">
+        {{#if ../isLoggedIn}}
+            <input type="button" onclick="navigateToPostPageLogged('{{_id}}')" value="See More">
         {{else}}
-        <input type="button" onclick="navigateToPostPage('{{_id}}')" value="See More">
+            <input type="button" onclick="navigateToPostPage('{{_id}}')" value="See More">
         {{/if}}
             <i class="fa-solid fa-thumbs-up upvote-icon"></i>
             <span class="downvote-count">{{upvotes}}</span>
@@ -92,7 +92,7 @@ function navigateToPostPage(id) {
     window.location.href = url;
 }
 function navigateToPostPageLogged(id) {
-    const url = `/api/post/getPost/${id}?isLoggedIn=true`;
+    const url = `/api/post/getPost/${id}/?isLoggedIn=true`;
     window.location.href = url;
 }
 
