--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -76,7 +76,7 @@
                         <option>Mihoyo</option>
                     </select>
                 <label>Content</label>
-                <input type="hidden" name="id" value="66776c6fb5909970e7f38836"> <!-- this is hardcoded for now sir said since ala pa sessions -->
+                <input type="hidden" name="id" value="668e4fe66e207fb7d10519f1"> <!-- this is hardcoded for now sir said since ala pa sessions User A-->
                 <textarea class="create-post-textarea" name="body"></textarea>
                 <input type="file" style="width:50%" name="image">
                 <input type="submit" value="submit">
