--- a/Phase2/public/common/style.css
+++ b/Phase2/public/common/style.css
@@ -163,7 +163,7 @@
     height:120px;
     position:relative;
     bottom:20px;
-    background-image: url(https://th.bing.com/th/id/OIP.Il94Ml51vJH0_ORjl49rYgHaJ4?w=142&h=189&c=7&r=0&o=5&pid=1.7);
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg");
     background-size:cover;
 }
 
