MCO3: Implemented Create and Reply COmments

--- a/Phase2/views/partials/comment.hbs
+++ b/Phase2/views/partials/comment.hbs
@@ -30,13 +30,18 @@
                 {{/if}}
             {{/if}}
 
+            <form name="create-comment" action="/api/comment/createComment" method="post">
             <div class="createComment replyComment">
-                <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                <input id="draftComment" name="commentText" type="text" contenteditable="true" placeholder="Enter your comment here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></input>
                 <div class="buttonsContainer">
                     <button id="attachFilesComment" onclick="window.alert('To Be Done')">Attach Files</button>
-                    <button id="postComment" onclick="window.alert('To Be Done')">Reply</button>
+                    <button id="postComment">Reply</button>
                 </div>
             </div>
+            <input type="hidden" name="comment_uid" value="668ccd48463f3ef61ee1b659"> <!-- this is hardcoded for now sir said since ala pa sessions -->
+            <input type="hidden" name="post_id" value="{{c_post_id}}"> <!-- this is hardcoded for now sir said since ala pa sessions -->
+            <input type="hidden" name="parentComment" value="{{_id}}"> <!-- this is hardcoded for now sir said since ala pa sessions -->
+            </form>
         </div>
         {{#if isLoggedIn}}
             {{#each replies}}
