--- a/Phase2/views/post_page.hbs
+++ b/Phase2/views/post_page.hbs
@@ -54,13 +54,18 @@
         </div>
         <div class="comments-container">
             <h2>Comments</h2>
+            <form name="create-comment" action="/api/comment/createComment" method="post">
             <div class="createComment">
-                <div id="draftComment" contenteditable="true" placeholder="Enter your comment here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                <input id="draftComment" name="commentText" type="text" contenteditable="true" placeholder="Enter your comment here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></input>
                 <div class="buttonsContainer">
                     <button id="attachFilesComment" onclick="window.alert('To Be Done')">Attach Files</button>
                     <button id="postComment">Post</button>
                 </div>
+                <input type="hidden" name="comment_uid" value="668ccd48463f3ef61ee1b659"> <!-- this is hardcoded for now sir said since ala pa sessions -->
+                <input type="hidden" name="post_id" value="{{postdetails._id}}"> <!-- this is hardcoded for now sir said since ala pa sessions -->
+                <input type="hidden" name="parentComment"> <!-- this is hardcoded for now sir said since ala pa sessions -->
             </div>
+            </form>
             {{#if isLoggedIn}}
                 {{#each commentdetails}}
                     {{> comment this isLoggedIn=true}}
