changed email to user remove reactModel

--- a/Phase2/views/user_profile_page.hbs
+++ b/Phase2/views/user_profile_page.hbs
@@ -67,8 +67,8 @@
             <form class='Update-form'>
                 
                 <div class="input-box">
-                    <label>Email</label>
-                    <input type="email">
+                    <label>Username</label>
+                    <input type="username">
                     <div class = "close-btn" onclick="window.location.reload();">&times;</div>
                 </div>
                 <div class="input-box">
